--- a/server/config.json
+++ b/server/config.json
@@ -1,8 +1,8 @@
 {
-  "rds_host": "",
+  "rds_host": "database-2.cn66wegcqi7q.us-east-2.rds.amazonaws.com",
   "rds_port": "3306",
-  "rds_user": "",
-  "rds_password": "",
+  "rds_user": "runjiezhao8",
+  "rds_password": "Zrj930823?",
   "rds_db": "SWIFTIFY",
   "server_host": "localhost",
   "server_port": "8080"
