--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # ignore config.json
-config.json
+/config.json
 
 # dependencies
 /node_modules
